# mandemod

./: .gitignore  Cargo.toml  LICENSE  composer.json  modular.db  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
app/Data/: ErrorPageData.php
app/Enums/: ModuleFormat.php
app/Http/Controllers/: ModuleController.php
app/Models/: Category.php  Manufacturer.php  Module.php  Rack.php  RackedModule.php  Row.php  User.php
bootstrap/: app.php
config/: solo.php  typescript-transformer.php
database/factories/: ManufacturerFactory.php  ModuleFactory.php  UserFactory.php
database/migrations/: 2025_04_01_231942_create_manufacturers_table.php  2025_04_01_232024_create_modules_table.php  2025_04_01_232059_create_categories_table.php  2025_04_01_232205_create_category_module_pivot_table.php  2025_04_01_232223_create_racks_table.php  2025_04_01_232411_create_rows_table.php  2025_04_01_232423_create_module_rack_pivot_table.php
database/seeders/: CategorySeeder.php
migrations/: 20250212182317_users-table-init.up.sql  20250212183106_manufacturers-table-init.down.sql  20250212183106_manufacturers-table-init.up.sql  20250212183116_modules-table-init.down.sql  20250212183116_modules-table-init.up.sql  20250212183159_racks-table-init.down.sql  20250212183159_racks-table-init.up.sql
resources/css/: app.css  fonts.css
resources/scripts/: app.ts
resources/scripts/routes/: routes.json
resources/scripts/types/: generated.d.ts  generated.ts  routes.d.ts
resources/views/: app.blade.php
routes/: web.php
src/: main.rs
src/db/: mod.rs
(+3 files in other folders)
