[package]
name = "mandemod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "derive",
  "chrono",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
